--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,6 @@
 	<classpathentry kind="src" path="Resources"/>
 	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
 	<classpathentry kind="lib" path="Resources/rs2xml.jar"/>
-	<classpathentry kind="lib" path="C:/Users/MCV/Desktop/mysql-connector-java-5.1.49-bin.jar"/>
+	<classpathentry kind="lib" path="D:/Downloads/mysql-connector-java-8.0.21/mysql-connector-java-8.0.21.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
