add validations and images for sessions

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -23,3 +23,9 @@
 /session2.png
 /teacher.png
 /session3.png
+/session5.png
+/session6.png
+/session7.png
+/session8.png
+/session9.png
+/session10.png
