--- a/.classpath
+++ b/.classpath
@@ -6,9 +6,9 @@
 	<classpathentry kind="src" path="Resources"/>
 	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
 	<classpathentry kind="lib" path="Resources/rs2xml.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/mysql-connector-java-5.1.49-bin.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/jdatepicker-1.3.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/jcommon-1.0.23.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/jfreechart.jar"/>
+	<classpathentry kind="lib" path="D:/Sliit Y3S2/mysql-connector-java-8.0.21/mysql-connector-java-8.0.21.jar"/>
+	<classpathentry kind="lib" path="D:/Sliit Y3S2/SECOND SEM TIMETABLE PACKAGE/PramodSprint2/jar/jdatepicker-1.3.4.jar"/>
+	<classpathentry kind="lib" path="D:/Sliit Y3S2/SECOND SEM TIMETABLE PACKAGE/PramodSprint2/jar/jfreechart-1.0.19/lib/jcommon-1.0.23.jar"/>
+	<classpathentry kind="lib" path="D:/Sliit Y3S2/SECOND SEM TIMETABLE PACKAGE/PramodSprint2/jar/jfreechart-1.0.19/lib/jfreechart-1.0.19.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
